--- a/Index.html
+++ b/Index.html
@@ -14,13 +14,15 @@
         <h1>Taco Cats</h1>
         </div>
         <p>
-                Welcome to the one and only taco cat website! Here you can get the latest taco cat merchandise, such as shirts and plushies! Explore a library of taco cat games, and taco cat merchandise is perfect for gifts too. What, your friends dont lik za taco cat? Buy them some taco cat merchandise anyway LOL.
+                Welcome to The taco cat website! Here you can get the latest taco cat merchandise, such as shirts and plushies! Explore a library of taco cat games, and taco cat merchandise is perfect for gifts too. What, your friends dont lik za taco cat? Buy them some taco cat merchandise anyway LOL.
         </p>
+        <div class="yes">
         <img src="https://static1.squarespace.com/static/56c3adf059827ec939adbaec/t/574a3c352109d35e20c56647/1464482869216/?format=1500w" align="center">
         <p> Get this limited edition taco cat costume, for your cat, for only $14.99!, WOAH, super deal! HUZZZAH!</p>
         <img src="https://media.kohlsimg.com/is/image/kohls/2384709?wid=1000&hei=1000&op_sharpen=1" align="center">
         <p>You can get this taco cat te-shirt for only $18.99, WOAH!</p>
         <img src="https://res.cloudinary.com/teepublic/image/private/s--pdzsaovs--/t_Preview/b_rgb:eae0c7,c_limit,f_jpg,h_630,q_90,w_630/v1483820644/production/designs/1062881_1.jpg">
         <p>This poaster shows you how to Tacocat, AND GEUSSE WHAT, ITS ONLY $5.00</p>
+        </div>
     </body>
 </htlm>
