--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <div class="background image">
             <h1>Taco Cat</h1>
             <pg>
-                <a href="merchandise.html">Merchandice</a> <a href="midea.html">Media</a>
+                <a href="merchandise.html">Merchandice</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="midea.html">Media</a>
             </pg>
             </div>
     </body>
