--- a/merchandise.html
+++ b/merchandise.html
@@ -9,7 +9,7 @@
     
     <body>
         <div class="selector">
- this is a test
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="midea.html">Media</a>
 </div>
         <div class= "yes">
         <img src="https://cdn.shopify.com/s/files/1/0032/7882/products/tacocat_art.png?v=1447870796" align="center">
@@ -17,7 +17,6 @@
         </div>
         <p>
                 Welcome to The taco cat website! Here you can get the latest taco cat merchandise, such as shirts and plushies! Explore a library of taco cat games, and taco cat merchandise is perfect for gifts too. What, your friends dont lik za taco cat? Buy them some taco cat merchandise anyway LOL.
-                <a href="index.html"><button>go back to the home page</button></a>
         </p>
         <div class="yes">
         <img src="https://static1.squarespace.com/static/56c3adf059827ec939adbaec/t/574a3c352109d35e20c56647/1464482869216/?format=1500w" align="center">
