--- a/midea.html
+++ b/midea.html
@@ -1,7 +1,10 @@
 <html>
    <head>
        <title>Tacocat Media</title>
-        <link rel="stylesheet3" href="stylesheet3.css" type="text/css"/>
+        <link rel="stylesheet" href="stylesheet3.css" type="text/css"/>
+         <div class="selector">
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="merchandise.html">merchandise</a>
+</div>
    </head> 
    <body>
        <div class= "yes">
@@ -13,6 +16,7 @@
            <a href="index.html"><button>go back to the home page</button></a>
            </p>
            Wanna play some taco cat games?...Well geuss what, you can! In this game you can play as taco cat and avoid obsticles, and eat all of the tacos.<a href="https://scratch.mit.edu/projects/112466615/"><button>Play Here</button></a>
+           <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/112466615/?autostart=false" frameborder="0" allowfullscreen></iframe>
        </p>
        </div>
    </body>
