--- a/midea.html
+++ b/midea.html
@@ -12,12 +12,13 @@
        <p>
            Games
        </p>
-       <p>
-           <a href="index.html"><button>go back to the home page</button></a>
-           </p>
-           Wanna play some taco cat games?...Well geuss what, you can! In this game you can play as taco cat and avoid obsticles, and eat all of the tacos.<a href="https://scratch.mit.edu/projects/112466615/"><button>Play Here</button></a>
+        <p>
            <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/112466615/?autostart=false" frameborder="0" allowfullscreen></iframe>
        </p>
+       <p>
+           Wanna play some taco cat games?...Well geuss what, you can! In this game you can play as taco cat and avoid obsticles, and eat all of the tacos.<a href="https://scratch.mit.edu/projects/112466615/">
+        </p>
+       
        </div>
    </body>
     
