--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <a href="merchandise.html">Merchandice</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="midea.html">Media</a>
             </pg>
             </div>
+            <p>
+                Welcome to The taco cat website! Here you can get the latest taco cat merchandise, such as shirts and plushies! Explore a library of taco cat games, and taco cat merchandise it's perfect for gifts too. What, your friends dont like taco cat? Buy them some taco cat merchandise anyway.
+        </p>
     </body>
     
     
